Start a express server

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
 <head>
     <script src="https://kit.fontawesome.com/c50fcbf383.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="./AppleLogo.png">
+    <link rel="shortcut icon" href="./imagens/AppleLogo.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>ColeStore</title>
 </head>
 
@@ -16,7 +16,7 @@
         <div class="Container-Header">
             <div class="Menu">
                 <div class="Logo">
-                    <img class="LogoCole" src="./Logo.png">
+                    <img class="LogoCole" src="./imagens/Logo.png">
                 </div>
                 <div href="#" class="Home">
                     <a href="#">Home</a>
@@ -38,7 +38,7 @@
             <div class="Divisao"></div>
         </div>
         <div class="LogoApple">
-            <img class="AppleLogo" src="./AppleLogo.png">
+            <img class="AppleLogo" src="./imagens/AppleLogo.png">
         </div>
     </header>
     <main>
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="FotoFrente">
-            <img class="FotoFrente" src="./Foto Frente.png">
+            <img class="FotoFrente" src="./imagens/Foto Frente.png">
         </div>
         <div class="Container-iphone13">
             <div class="Iphone13">
@@ -69,7 +69,7 @@
                 Your new superpower.
             </div>
             <div class="Imagemiphone13">
-                <img src="./iphone13.png" style="height: 370px;">
+                <img src="./imagens/iphone13.png" style="height: 370px;">
             </div>
         </div>
         <div class="Container-mac">
@@ -80,13 +80,13 @@
                 Supercharged for pros.
             </div>
             <div class="imagemMac">
-                <img src="./macbook.png" style="margin: 45px 0px 0px 0px;">
+                <img src="./imagens/macbook.png" style="margin: 45px 0px 0px 0px;">
             </div>
         </div>
         <div class="Produtos">
             <div class="Container-produtos1">
                 <div class="airpods">
-                    <img class="AirPod" src="./AirPods.png">
+                    <img class="AirPod" src="./imagens/AirPods.png">
                     <div class="airpodDesc1">
                         AirPods
                     </div>
@@ -113,7 +113,7 @@
                         <div class="learn2">Learn More</div>
                         <div class="buy2">Buy</div>
                     </div>
-                    <img class="Watches" src="./Watch.png">
+                    <img class="Watches" src="./imagens/Watch.png">
                 </div>
             </div>
             <div class="Container-produtos2">
@@ -129,14 +129,14 @@
                         <div class="buy3">Buy</div>
                     </div>
                     <div class="HomePodIMG">
-                        <img class="HomePODimagem" src="./HomePods.png">
+                        <img class="HomePODimagem" src="./imagens/HomePods.png">
                     </div>
                 </div>
                 <div class="ipad">
                     <div class="ipadDesc1">
                         iPad
                         <div class="MINIimg">
-                            <img class="MINI" src="./MINI.png">
+                            <img class="MINI" src="./imagens/MINI.png">
                         </div>
                     </div>
                     <div class="ipadDesc2">
@@ -147,7 +147,7 @@
                         <div class="buy4">Buy</div>
                     </div>
                     <div class="ipadimg">
-                        <img class="iPADimagem" src="./iPad.png">
+                        <img class="iPADimagem" src="./imagens/iPad.png">
                     </div>
                 </div>
             </div>
