--- a/public/signIN.html
+++ b/public/signIN.html
@@ -4,23 +4,23 @@
 <head>
     <script src="https://kit.fontawesome.com/c50fcbf383.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="./AppleLogo.png">
+    <link rel="shortcut icon" href="./imagens/AppleLogo.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./signIN.css">
+    <link rel="stylesheet" href="./styles/signIN.css">
     <title>Sign In</title>
 </head>
 <header>
     <div class="Container-Header">
         <div class="Menu">
             <div class="Logo">
-                <img class="LogoCole" src="./Logo.png" alt="ColeStore">
+                <img class="LogoCole" src="./imagens/Logo.png" alt="ColeStore">
             </div>
             <div href="#" class="Home">
                 <a href="./index.html">Home</a>
             </div>
             <div class="Suporte">
-                <a href="#">Suporte</a>
+                <a href="./suporte.html">Suporte</a>
             </div>
             <div class="Comprar">
                 <a href="#">Comprar</a>
