--- a/public/suporte.html
+++ b/public/suporte.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" href="./AppleLogo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styleiphone.css">
-    <title>Buy iPhone 13 Pro</title>
+    <link rel="shortcut icon" href="./imagens/AppleLogo.png">
+    <title>Help</title>
+    <link rel="stylesheet" href="./styles/suporte.css">
 </head>
 <body>
     <header>
         <div class="Container-Header">
             <div class="Menu">
                 <div class="Logo">
-                    <img class="LogoCole" src="./Logo.png" alt="ColeStore">
+                    <img class="LogoCole" src="./imagens/Logo.png">
                 </div>
                 <div href="#" class="Home">
                     <a href="./index.html">Home</a>
@@ -34,42 +34,28 @@
             </div>
             <div class="Divisao"></div>
         </div>
-        <div class="LogoApple">
-            <img class="AppleLogo" src="./AppleLogo.png">
-        </div>
     </header>
     <main>
-        <div class="ContainerMain">
-            <div class="Iphone13pro">
-                iPhone 13 Pro
-            </div>
+     <div class="Container-Geral">
+         <div class="help">
+             How can we help you?
+         </div>
+         <div class="container-search">
+         <div class="barraPesquisa">
+             <input class="search" type="search" placeholder="Find anything in ColeStore">
+         </div>
         </div>
-        <div class="ContainerPro">
-            <div class="Pro">
-                Oh. So. Pro.
-            </div>
+        <div class="top">
+            Top Questions
         </div>
-        <div class="imagemLado">
-            <img class="lado" src="./Foto lado.png">
+        <div class="botoes">
+            <button>About ColeStore Actions</button>
+            <button>Managing ColeStore Packages</button>
+            <button>ColeStore security</button>
+            <button>Activity notifications</button>
         </div>
-
-        <div class="container-preco">
-            <div class="preco">
-                R$ 14.990,00
-            </div>
-            <div class="comprar">
-                <button>Buy</button>
-            </div>
-        </div>
-        <div class="espaco"></div>
+     </div>
     </main>
-
-
-
-
-
-
-
     <footer></footer>
 </body>
 </html>
