--- a/public/comprariphone.html
+++ b/public/comprariphone.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" href="./imagens/AppleLogo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Help</title>
-    <link rel="stylesheet" href="./suporte.css">
+    <link rel="stylesheet" href="./styles/styleiphone.css">
+    <title>Buy iPhone 13 Pro</title>
 </head>
 <body>
     <header>
         <div class="Container-Header">
             <div class="Menu">
                 <div class="Logo">
-                    <img class="LogoCole" src="./Logo.png">
+                    <img class="LogoCole" src="./imagens/Logo.png" alt="ColeStore">
                 </div>
                 <div href="#" class="Home">
                     <a href="./index.html">Home</a>
@@ -33,27 +34,34 @@
             </div>
             <div class="Divisao"></div>
         </div>
+        <div class="LogoApple">
+            <img class="AppleLogo" src="./imagens/AppleLogo.png">
+        </div>
     </header>
     <main>
-     <div class="Container-Geral">
-         <div class="help">
-             How can we help you?
-         </div>
-         <div class="container-search">
-         <div class="barraPesquisa">
-             <input class="search" type="search" placeholder="Find anything in ColeStore">
-         </div>
+        <div class="ContainerMain">
+            <div class="Iphone13pro">
+                iPhone 13 Pro
+            </div>
         </div>
-        <div class="top">
-            Top Questions
+        <div class="ContainerPro">
+            <div class="Pro">
+                Oh. So. Pro.
+            </div>
         </div>
-        <div class="botoes">
-            <button>About ColeStore Actions</button>
-            <button>Managing ColeStore Packages</button>
-            <button>ColeStore security</button>
-            <button>Activity notifications</button>
+        <div class="imagemLado">
+            <img class="lado" src="./imagens/Foto lado.png">
         </div>
-     </div>
+
+        <div class="container-preco">
+            <div class="preco">
+                R$ 14.990,00
+            </div>
+            <div class="comprar">
+                <button>Buy</button>
+            </div>
+        </div>
+        <div class="espaco"></div>
     </main>
     <footer></footer>
 </body>
