--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="ContainerPro">
             <div class="Pro">
-                Oh. So. Pro.
+                Oh. So. Pro. OLA
             </div>
         </div>
         <div class="buyLearn5">
